@@ -634,7 +634,10 @@ end
 
     ruby_code = @a2.to_ruby
 
-    expected = "Gem::Specification.new do |s|
+    expected = <<-SPEC
+# -*- encoding: utf-8 -*-
+
+Gem::Specification.new do |s|
   s.name = %q{a}
   s.version = \"2\"
 
@@ -663,7 +666,7 @@ end
     s.add_dependency(%q<b>, [\"= 1\"])
   end
 end
-"
+    SPEC
 
     assert_equal expected, ruby_code
 
@@ -679,7 +682,10 @@ end
     local = Gem::Platform.local
     expected_platform = "[#{local.cpu.inspect}, #{local.os.inspect}, #{local.version.inspect}]"
 
-    expected = "Gem::Specification.new do |s|
+    expected = <<-SPEC
+# -*- encoding: utf-8 -*-
+
+Gem::Specification.new do |s|
   s.name = %q{a}
   s.version = \"1\"
   s.platform = Gem::Platform.new(#{expected_platform})
@@ -721,7 +727,7 @@ end
     s.add_dependency(%q<pqa>, [\"> 0.4\", \"<= 0.6\"])
   end
 end
-"
+    SPEC
 
     assert_equal expected, ruby_code
 
